--- a/sass/style.sass
+++ b/sass/style.sass
@@ -30,6 +30,13 @@ a
 strong
 	font-weight: bold
 
+.skill
+	display: inline-block
+	background-color: rgba(203,209,211,.7)
+	padding: 0.8rem
+	border-radius: 8px
+	margin: 0 0.8rem 0.8rem 0
+
 
 .menu
 	&-link
@@ -115,8 +122,6 @@ strong
 		font-weight: bold
 		color: #000
 		margin: 2rem
-
-#portfolio
 
 .portfolio
 	&-item
