--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,7 @@ strong {
 .feedback label {
   width: 100%; }
   .feedback label span input[type="text"], .feedback label span input[type="email"], .feedback label span textarea {
+    padding: 1rem;
     width: 100%;
     border-radius: 0.5rem; }
   .feedback label span textarea {
