--- a/sass/style.sass
+++ b/sass/style.sass
@@ -185,6 +185,7 @@ strong
 		width: 100%
 		span
 			input[type="text"], input[type="email"], textarea
+				padding: 1rem
 				width: 100%
 				border-radius: 0.5rem
 
